--- a/Home Work/MarkDown/Домашка.md
+++ b/Home Work/MarkDown/Домашка.md
@@ -2,9 +2,9 @@
 # Домашняя работа 
 1. ***Максим Скороходов*** ![Фото](https://sun9-9.userapi.com/impf/c850224/v850224489/1e53b/PBaYtHT6TEs.jpg?size=2048x2048&quality=96&sign=2ba94af9150ea3eb396c77af03a004f3&type=album)
 2. [My Instagram](https://www.instagram.com/freddy_vaal/), [Ссылка на репозиторий](https://github.com/MaksimSkorohodov/MyRepo)
-3.  == Моя цель узнать новое направление для себя - программирование. Я целеустремленный и не боюсь трудностей. Опыта на данный момент в сфере программирования - нет.   ==
-4. Отсутствуют
-5. Пример кода <html>
+3.  *== Моя цель узнать новое направление для себя - программирование. Я целеустремленный и не боюсь трудностей. Опыта на данный момент в сфере программирования - нет.   ==*
+4. *Отсутствуют*
+5. *Пример кода* <html>
 <head>
 <script>
 function myFunction() {
@@ -23,5 +23,5 @@ function myFunction() {
 </body>
 </html> 
 6. *Опыт работы в Junior Dev: 3 занятия :)*
-7. Средне-специальное 
-8. А1
+7. *Средне-специальное* 
+8. *А1*
